--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nookies": "2.5.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-ga": "^3.3.1"
+    "react-ga4": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.4",
