--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "next-translate": "1.3.5",
     "nookies": "2.5.2",
     "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "react-ga4": "^2.0.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.4",
