--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^20.6.0",
     "autoprefixer": "10.4.4",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
