--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
   "name": "portfolio",
-  "description": "Personal portafolio of Agustin Ribotta",
+  "description": "Portafolio of Agustin Ribotta",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "1.0.6",
+    "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "framer-motion": "6.2.8",
     "gray-matter": "4.0.3",
     "next": "12.1.4",
     "next-mdx-remote": "^4.0.2",
     "next-translate": "1.3.5",
+    "nodemailer": "^6.9.7",
     "nookies": "2.5.2",
     "react": "^17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^9.5.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/nodemailer": "^6.4.14",
     "autoprefixer": "10.4.4",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
